Refactor learning video: split input into 2 steps - Step 1: Basic Settings, Step 2: Data & Templates, Step 3: Preview & Process